// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Link as toggle renders correctly 1`] = `
<jest>
  <a
    aria-controls="collapseExample"
    aria-expanded="false"
    data-bs-toggle="collapse"
    href="#collapseExample"
    role="button"
  >
    I am a link
  </a>
</jest>
`;

exports[`OE - Link danger renders correctly 1`] = `
<jest>
  <a
    class="link-danger"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link dark renders correctly 1`] = `
<jest>
  <a
    class="link-dark"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link info renders correctly 1`] = `
<jest>
  <a
    class="link-info"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link light renders correctly 1`] = `
<jest>
  <a
    class="link-light"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link primary renders correctly 1`] = `
<jest>
  <a
    class="link-primary"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link renders correctly 1`] = `
<jest>
  <a
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link secondary renders correctly 1`] = `
<jest>
  <a
    class="link-secondary"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link success renders correctly 1`] = `
<jest>
  <a
    class="link-success"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link warning renders correctly 1`] = `
<jest>
  <a
    class="link-warning"
    href="/example.html"
  >
    A simple link!
  </a>
</jest>
`;

exports[`OE - Link with icon renders correctly 1`] = `
<jest>
  <a
    href="/example.html"
  >
    A simple link!
    <svg
      class="bi icon--s icon--rotate-90"
    >
      <use
        xlink:href="bootstrap-icons.svg#mouse"
      />
    </svg>
  </a>
</jest>
`;

exports[`OE - Link with tooltip renders correctly 1`] = `
<jest>
  <a
    data-bs-toggle="tooltip"
    href="/example.html"
    role="button"
    title="This is a tooltip"
  >
    A link with tooltip
  </a>
</jest>
`;
